ensure form looks nice on mobile and desktop. #1

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -17,10 +17,11 @@ h1 {
   margin: 0;
   color: white;
   font-size: 1.25rem;
+  font-family: 'Chivo', sans-serif;
 }
 
 .form-container {
-  height: 10rem;
+  /* height: 10rem; */
   margin-top: 5rem;
 }
 
@@ -29,17 +30,17 @@ h1 {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin-bottom: 2rem;
+  margin: 5rem auto;
 }
 
 .col-half {
   width: 40%;
 }
 
-.col-full {
+/* .col-full {
   width: 95%;
   margin-top: 2rem;
-}
+} */
 
 input {
   width: 100%;
@@ -47,5 +48,31 @@ input {
 
 select {
   width: 9rem;
-  margin-left: 2rem;
+}
+
+label {
+  font-family: 'Overpass', sans-serif;
+  font-size: 0.8rem;
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 2rem;
+}
+
+.submit-button {
+  display: flex;
+  background-color: #16c79a;
+  border-radius: 50%;
+  height: 3rem;
+  width: 3rem;
+  margin-top: 5rem;
+}
+
+i {
+  width: 1rem;
+  height: 1rem;
+  margin: auto;
+  color: white;
 }
